--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=springmvc
 spring.output.ansi.enabled=always
 spring.messages.basename=messages,errors
 logging.level.hello.springmvc=debug
+server.servlet.session.tracking-modes=cookie
